--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             document.getElementById("yesButton").addEventListener("click", showAlert);
 
             function showAlert() {
-                alert("I love you! See you soon <3");
+                alert("See you soon (:");
             }
 
             var yesButton = document.getElementById("yesButton");
