--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             var valentineImage = document.getElementById("valentineImage");
 
             var noTexts = ["Are you sure?", "Give me a chance..", "Pookie please", "Don't do this to me ):", "You're breaking my heart", "brb crying", "</3"];
-            var imageSources = ["https://tenor.com/en-GB/view/sad-gif-3743010737282172028", "https://tenor.com/en-GB/view/cat-holding-head-cat-sad-cat-rahh-wahhhh-gif-11843610789762008433", "https://tenor.com/en-GB/view/puss-in-boots-cat-cute-kitty-begging-gif-14686660564512924072", "https://tenor.com/en-GB/view/bard1a-sad-cat-sad-dark-dark-side-gif-11200514925795091536", "https://tenor.com/en-GB/view/crying-cat-sad-cat-me-when-i-dont-get-orod-tickets-gif-17550107775956741096", "https://tenor.com/en-GB/view/sad-cat-content-aware-scale-blanket-gif-20687604", "https://tenor.com/en-GB/view/cat-sad-gif-7277165444504831397", "https://tenor.com/en-GB/view/cat-gif-20790073", "https://tenor.com/en-GB/view/sad-cat-sad-cat-goofy-silly-gif-3369882748890125195", "https://tenor.com/en-GB/view/cry-cat-car-cars-gato-gif-9292895994415154895", "https://tenor.com/en-GB/view/sad-cat-cute-gif-3340631991031695816", "https://tenor.com/en-GB/view/mewhenthe-gif-18908435"];
+            var imageSources = ["https://imgur.com/9t5guZb", "https://imgur.com/vELNQAM", "https://imgur.com/l3t1L7J", "https://imgur.com/53sfwoc", "https://imgur.com/43Nj6sC", "https://imgur.com/YvR024L"];
 
             no.addEventListener("click", change);
 
