--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             var valentineImage = document.getElementById("valentineImage");
 
             var noTexts = ["Are you sure?", "Give me a chance..", "Pookie please", "Don't do this to me ):", "You're breaking my heart", "brb crying", "</3"];
-            var imageSources = ["https://imgur.com/9t5guZb", "https://imgur.com/vELNQAM", "https://imgur.com/l3t1L7J", "https://imgur.com/53sfwoc", "https://imgur.com/43Nj6sC", "https://imgur.com/YvR024L"];
+            var imageSources = ["https://i.imgur.com/9t5guZb", "https://i.imgur.com/vELNQAM", "https://i.imgur.com/l3t1L7J", "https://i.imgur.com/53sfwoc", "https://i.imgur.com/43Nj6sC", "https://i.imgur.com/YvR024L"];
 
             no.addEventListener("click", change);
 
