--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             var valentineImage = document.getElementById("valentineImage");
 
             var noTexts = ["Are you sure?", "Give me a chance..", "Pookie please", "Don't do this to me ):", "You're breaking my heart", "brb crying", "</3"];
-            var imageSources = ["https://i.imgur.com/9t5guZb", "https://i.imgur.com/vELNQAM", "https://i.imgur.com/l3t1L7J", "https://i.imgur.com/53sfwoc", "https://i.imgur.com/43Nj6sC", "https://i.imgur.com/YvR024L"];
+            var imageSources = ["C:\Users\Natt\Downloads\1\cry-cat.gif", "C:\Users\Natt\Downloads\1\sad-cat-sad.gif", "C:\Users\Natt\Downloads\1\cat.gif", "C:\Users\Natt\Downloads\1\cat-sad.gif", "C:\Users\Natt\Downloads\1\sad-cat-content-aware-scale.gif", "C:\Users\Natt\Downloads\1\crying-cat-sad-cat.gif", "C:\Users\Natt\Downloads\1\bard1a-sad-cat.gif", "C:\Users\Natt\Downloads\1\puss-in-boots-cat.gif", "C:\Users\Natt\Downloads\1\cat-holding-head-cat.gif", "C:\Users\Natt\Downloads\1\sad.gif"];
 
             no.addEventListener("click", change);
 
