--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <br/>
             <br/>
             <br/>
-            <button id="yesButton">Yes</button>
-            <button id="no">No</button>
+            <button id="yesButton">yes</button>
+            <button id="no">no</button>
         </div>
 
         <style>
