--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             var no = document.getElementById("no");
             var valentineImage = document.getElementById("valentineImage");
 
-            var noTexts = ["are you sure?", "give me a chance..", "pookie please", "don't do this to me ):", "u gon do me like that?", "brb crying", "</3"];
+            var noTexts = ["are you sure?", "give me a chance..", "pookie please", "don't do this to me ):", "u gon do me like that?", "brb crying", "</3", "this is who you're saying no to", "ok you can pinch my cheeks", "i'll think of stories.."];
             var imageSources = ["https://media1.tenor.com/m/M_HYbyotRHwAAAAd/sad.gif", "https://media1.tenor.com/m/m3A4-216JFAAAAAd/bard1a-sad-cat.gif", "https://media1.tenor.com/m/gPb_q8nEBs8AAAAd/cry-cat.gif", "https://media1.tenor.com/m/pFz1Q12_hXEAAAAd/cat-holding-head-cat.gif", "https://media1.tenor.com/m/Y3j6d3RoSEoAAAAd/sad-cat-content-aware-scale.gif", "https://media1.tenor.com/m/t7_iTN0iYekAAAAd/sad-sad-cat.gif", "https://media1.tenor.com/m/ZP2vamt1RaUAAAAd/cat-sad.gif"];
 
             no.addEventListener("click", change);
