--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             var no = document.getElementById("no");
             var valentineImage = document.getElementById("valentineImage");
 
-            var noTexts = ["are you sure?", "give me a chance..", "pookie please", "don't do this to me ):", "u gon do me like that?", "brb crying", "</3", "this is who you're saying no to", "ok you can pinch my cheeks", "i'll think of stories.."];
-            var imageSources = ["https://media1.tenor.com/m/M_HYbyotRHwAAAAd/sad.gif", "https://media1.tenor.com/m/m3A4-216JFAAAAAd/bard1a-sad-cat.gif", "https://media1.tenor.com/m/gPb_q8nEBs8AAAAd/cry-cat.gif", "https://media1.tenor.com/m/pFz1Q12_hXEAAAAd/cat-holding-head-cat.gif", "https://media1.tenor.com/m/Y3j6d3RoSEoAAAAd/sad-cat-content-aware-scale.gif", "https://media1.tenor.com/m/t7_iTN0iYekAAAAd/sad-sad-cat.gif", "https://media1.tenor.com/m/ZP2vamt1RaUAAAAd/cat-sad.gif"];
+            var noTexts = ["are you sure?", "give me a chance..", "pookie please", "don't do this to me ):", "u gon do me like that?", "brb crying", "</3", "this is who you're saying no to", "ok you can pinch my cheeks", "i'll think of stories..", "me when you", "but please"];
+            var imageSources = ["https://media1.tenor.com/m/M_HYbyotRHwAAAAd/sad.gif", "https://media1.tenor.com/m/m3A4-216JFAAAAAd/bard1a-sad-cat.gif", "https://media1.tenor.com/m/gPb_q8nEBs8AAAAd/cry-cat.gif", "https://media1.tenor.com/m/pFz1Q12_hXEAAAAd/cat-holding-head-cat.gif", "https://media1.tenor.com/m/Y3j6d3RoSEoAAAAd/sad-cat-content-aware-scale.gif", "https://media1.tenor.com/m/t7_iTN0iYekAAAAd/sad-sad-cat.gif", "https://media1.tenor.com/m/ZP2vamt1RaUAAAAd/cat-sad.gif", "https://media1.tenor.com/m/ZyqhFIPi2OgAAAAd/cat-crying-cat.gif", "https://media1.tenor.com/m/oUebF_VuUTUAAAAd/cat-kitten.gif", "https://media1.tenor.com/m/p-aWZbkXUYwAAAAd/sad-el-gato-sad-cat.gif", "https://media1.tenor.com/m/00SNToMgoq4AAAAd/cat-sob.gif", "https://media.tenor.com/nUKvaF6VYa4AAAAj/cwif-catwifhat.gif", "https://media1.tenor.com/m/IUU-YNpPSLgAAAAd/cat.gif", "https://tenor.com/view/puss-in-boots-cat-cute-kitty-begging-gif-14686660564512924072"];
 
             no.addEventListener("click", change);
 
