--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             document.getElementById("yesButton").addEventListener("click", showAlert);
 
             function showAlert() {
-                alert("See you soon (:");
+                alert("see you soon (((((:");
             }
 
             var yesButton = document.getElementById("yesButton");
